# fdm

./: .gitattributes  .gitignore  Cargo.toml  build-config.lua  build.rs
examples/: package.yml  rdm2.toml
py/: config.py
src/: config.rs  consts.rs  fdm.rs  main.rs  rdm2.rs
src/cli/: args.rs  mod.rs  out.rs
src/cmake/: commands.rs  mod.rs  parser.rs
src/init/: .clang-format  .gitattributes  .gitignore  initializer.rs  mod.rs
src/manifest/: dependencies.rs  manifest.rs  mod.rs  package.rs
src/registry/: client_builder.rs  git.rs  mod.rs  registry.rs
src/types/: build_system.rs  dependencies.rs  descriptor.rs  distribution.rs  index.rs  language.rs  mod.rs  platform.rs  version.rs
